// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalMessage renders correctly 1`] = `
<div
  className="auth0-global-message auth0-global-message-success"
>
  <span
    className="animated fadeInUp"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Success!",
      }
    }
  />
</div>
`;

exports[`GlobalMessage renders with error type 1`] = `
<div
  className="auth0-global-message auth0-global-message-error"
>
  <span
    className="animated fadeInUp"
    dangerouslySetInnerHTML={
      Object {
        "__html": "An error occurred.",
      }
    }
  />
</div>
`;
